# humanshipd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/examples/: corpus_calibration.rs  docx_extract.rs  gdocs_consistency.rs  iscc_calibration.rs  iscc_crossformat.rs  issue_credential.rs  pdf_extract.rs  verify_badge.rs  verify_credential.rs
core/src/: badge.rs  canonical.rs  capture_log.rs  credential.rs  error.rs  fingerprint.rs  formats.rs  gdocs.rs  lib.rs  record.rs  report.rs  session.rs  signing.rs  text_embed.rs  timestamp.rs  verify.rs
core/tests/: canonicalization.rs  capture_log.rs  credential.rs  fingerprint.rs  formats.rs  gdocs.rs  pipeline.rs  report.rs  signing.rs  text_embed.rs  timestamp.rs
core/tests/common/: mod.rs
docs/research/: 2026-06-05-adopting-c2pa-credential-stack.md  2026-06-05-app-agnostic-capture-architecture.md  2026-06-05-human-authorship-label-framing.md  2026-06-05-proof-of-human-authorship-feasibility.md  2026-06-06-ai-authorship-signals-and-probability-bands.md  2026-06-06-competitive-landscape-authorship-tools.md  2026-06-06-document-binding-and-content-identity.md  2026-06-06-edit-stream-models-capture-pipeline.md  2026-06-06-google-docs-writing-capture.md  2026-06-06-software-architecture-practices.md  2026-06-08-credential-signing-trust-and-fork-and-forge.md  2026-06-08-identity-binding-without-a-ca.md  2026-06-08-native-document-identity.md  README.md
docs/superpowers/plans/: 2026-06-09-continuity-accumulation-slice1.md
docs/superpowers/specs/: 2026-06-05-human-authorship-attestation-design.md  2026-06-06-authorship-signals-and-reporting-design.md  2026-06-06-content-binding-and-capture-fidelity-design.md  2026-06-07-capture-and-binding-decisions.md  2026-06-09-continuity-accumulation-design.md
extension/: README.md  background.js  build-wasm.sh  content.js  gdocs-inject.js  gdocs.js  issue-worker.js  manifest.json  popup.html  popup.js  zip.js
extension/host/: install.sh
extension/tests/: capture.spec.js  continuity.spec.js  gdocs.spec.js  no-host.spec.js  package.json  playwright.config.js
extension/tests/fixtures/: gdocs-save.json
macos-capture/: Cargo.toml  bundle.sh
macos-capture/src/: ax.rs  lib.rs  main.rs  session.rs
native-host/: Cargo.toml
native-host/src/: handler.rs  keystore.rs  lib.rs  main.rs  messages.rs  protocol.rs
native-host/tests/: host.rs
registry/: Cargo.toml
registry/src/: lib.rs  main.rs
registry/tests/: durable_recovery.rs
web-verify/: Cargo.toml  README.md  verify.html
web-verify/examples/: README.md  credential.c2pa  document.txt
web-verify/src/: lib.rs
web-verify/tests/: package.json  playwright.config.js  verify.spec.js
