[package]
name = "humanshipd-core"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Credential core for humanshipd: record schema, canonicalization, hashing, signing, RFC 3161, verification."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
hex = "0.4"
