[package]
name = "humanshipd-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Credential core for humanshipd: record schema, canonicalization, hashing, signing, RFC 3161, verification."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
hex = "0.4"
c2pa = { version = "0.85", default-features = false }
iscc-lib = "0.4.0"

[features]
default = ["native"]
# Native builds use OpenSSL (unchanged behavior; the test suite runs here).
native = ["c2pa/openssl", "c2pa/default_http"]
# WASM builds swap to c2pa's pure-Rust crypto (no OpenSSL).
wasm = ["c2pa/rust_native_crypto"]

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
zip = "8"
pdf-extract = "0.9"
