[package]
name = "humanshipd-macos-capture"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Native macOS Accessibility capture adapter for humanshipd."

[lib]
name = "humanshipd_capture"

[dependencies]
humanshipd-core = { path = "../core" }

# macOS-only Accessibility crates — target-gated so the workspace builds on every
# OS (only the relevant capture adapter compiles per platform).
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
accessibility-sys = "0.1"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
