[package]
name = "humanshipd-host"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Native Messaging host for humanshipd: wraps the core to issue badges from captured sessions."

[dependencies]
humanshipd-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
